@@ -1,3 +1,6 @@
+
+- Check for true within _check_connection
+
 Version 2022.7.9 (2022-07-17)
 - Remove state_uncertain from default attributes
 
